--- a/pages/tab-bar-pages/home/index.wxss
+++ b/pages/tab-bar-pages/home/index.wxss
@@ -52,6 +52,7 @@
   align-items: center;
   justify-content: space-between;
   margin: 8px;
+  margin-top: 4px;
   padding-left: 16px;
   padding-right: 8px;
   height: 40px;
