--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -29,7 +29,7 @@
     </swiper-item>
     <swiper-item>
       <view class="content-wrap" style="padding-top: {{statusBarHeight + 98}}px;">
-        <top-media topMediaList="{{topMediaList}}" />
+        <top-media wx:if="{{topMediaList.length}}" topMediaList="{{topMediaList}}" />
         <fall-flow class="fall-flow" list="{{mediaList}}" generic:item="media-item" bind:finish="setWrapHeight" />
         <empty-illus wx:if="{{finished && !mediaList.length}}" desc="暂无列表" />
         <view class="no-more-tips" wx:if="{{finished && mediaList.length}}">～没有更多了～</view>
