--- a/pages/subpages/home/media/video/components/video-item/index.wxss
+++ b/pages/subpages/home/media/video/components/video-item/index.wxss
@@ -112,6 +112,7 @@
   padding: 12rpx;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 12rpx;
 }
 .comodity-icon {
   width: 32rpx;
