--- a/pages/subpages/mall/components/hotel-item/index.wxss
+++ b/pages/subpages/mall/components/hotel-item/index.wxss
@@ -5,12 +5,12 @@
   border-radius: 12rpx;
   box-shadow: 0 0 12rpx 6rpx #f5f6f7;
 }
-.hotel-image {
+.hotel-cover {
   border-radius: 12rpx 12rpx 0 0;
   width: 100%;
   height: 180rpx;
 }
-.hotel-info {
+.hotel-info-wrap {
   padding: 10rpx;
 }
 .hotel-name {
