feat: 景点详情页

--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -139,7 +139,7 @@
       bind:showNoticePopup="showNoticePopup"
     />
   </view>
-  <empty-illus wx:if="{{!ticketTypeList.length}}" desc="暂无景点门票" height="520rpx" />
+  <empty-illus wx:if="{{!ticketTypeList.length}}" desc="暂无景点门票" btnContent="商家入驻" bind:btnClick="settleIn" height="520rpx" />
 
   <view class="content-title-wrap" wx:if="{{combinedTicketTypeList.length}}">
     <view class="content-title">多景点联票</view>
