feat: 景点列表销量

--- a/components/commodity-list/index.wxml
+++ b/components/commodity-list/index.wxml
@@ -18,11 +18,12 @@
       <view class="commodity-info">
         <view class="commodity-name omit single-line">{{item.name}}</view>
         <view class="row between baseline">
-          <view class="row baseline">
+          <view class="row baseline" wx:if="{{item.price}}">
             <price-unit price="{{item.price || 0}}" unit="{{item.type !== 4 ? '起' : ''}}" fontSize="22rpx" integerFontSize="26rpx" />
             <view class="market-price" wx:if="{{item.marketPrice}}">¥{{item.marketPrice}}</view>
           </view>
-          <view class="sales-volumns">已售{{item.salesVolume}}</view>
+          <view class="free-tips">免费打卡</view>
+          <view class="sales-volumns" wx:if="{{item.salesVolume}}">已售{{item.salesVolume}}</view>
         </view>
       </view>
     </view>
