--- a/components/scenic-item/index.wxml
+++ b/components/scenic-item/index.wxml
@@ -26,9 +26,9 @@
       <text style="margin-left: 2rpx;">起</text>
     </view>
     <view class="price" wx:if="{{!item.price}}">免费打卡</view>
-    <view class="sales" wx:if="{{item.salesVolumns}}">
+    <view class="sales" wx:if="{{item.salesVolume}}">
       <text>已售</text>
-      <text style="font-weight: bold;">{{ item.salesVolumns || 0 }}</text>
+      <text style="font-weight: bold;">{{ item.salesVolume || 0 }}</text>
     </view>
   </view>
 </view>
