--- a/pages/subpages/mall/scenic-spot/index.wxml
+++ b/pages/subpages/mall/scenic-spot/index.wxml
@@ -6,7 +6,7 @@
       <text class="placeholder">搜索景点</text>
     </view>
   </view>
-  <scroll-view 
+  <!-- <scroll-view 
     class="category-tabs" 
     scroll-left="{{tabScroll}}"
     scroll-x
@@ -20,10 +20,15 @@
       bindtap="selectCate" 
       data-idx="{{index}}"
       >{{item.name}}</view>
-  </scroll-view>
+  </scroll-view> -->
+
+  <van-dropdown-menu active-color="#1989fa">
+    <van-dropdown-item value="{{ curSortIndex }}" options="{{ sortOptions }}" bind:change="setSortIndex" />
+    <van-dropdown-item value="{{ curCategoryId }}" options="{{ categoryOptions }}" bind:change="setCategoryId" />
+  </van-dropdown-menu>
 </view>
 
-<view class="container" style="padding-top: {{statusBarHeight + 88}}px;">
+<view class="container" style="padding-top: {{statusBarHeight + 94}}px;">
   <scenic-spot-item wx:for="{{scenicList}}" wx:key="index" item="{{item}}" />
   <empty-illus wx:if="{{finished && !scenicList.length}}" desc="暂无列表" />
   <view class="no-more-tips" wx:if="{{finished && scenicList.length}}">～没有更多了～</view>
