--- a/pages/subpages/home/media/video/components/video-item/index.wxml
+++ b/pages/subpages/home/media/video/components/video-item/index.wxml
@@ -68,11 +68,12 @@
             <view class="commodity-name omit single-line">{{STRING.slice(_item.name || '', 8)}}</view>
           </view>
           <view class="commodity-data-wrap row between baseline">
-            <view class="row baseline">
+            <view class="row baseline" wx:if="{{_item.price}}">
               <price-unit price="{{_item.price || 0}}" unit="{{_item.type !== 4 ? '起' : ''}}" color="#FFDD00" unitColor="#fff" fontSize="22rpx" integerFontSize="28rpx" unitFontSize="18rpx" />
               <view class="market-price" wx:if="{{_item.marketPrice}}">¥{{_item.marketPrice}}</view>
             </view>
-            <view class="sales-volumns">已售{{_item.salesVolume}}</view>
+            <view class="free-tips" wx:if="{{!_item.price}}">免费打卡</view>
+            <view class="sales-volumns" wx:if="{{_item.salesVolume}}">已售{{_item.salesVolume}}</view>
           </view>
         </view>
       </view>
