--- a/pages/tab-bar-pages/home/components/top-media/index.wxss
+++ b/pages/tab-bar-pages/home/components/top-media/index.wxss
@@ -18,11 +18,14 @@
 
 .top-media-time {
   position: absolute;
-  top: 24rpx;
-  left: 24rpx;
+  top: 0;
+  left: 0;
+  padding-top: 16rpx;
+  padding-left: 24rpx;
   display: flex;
   align-items: center;
   color: #fff;
+  background: linear-gradient(0, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
 .time-date {
   font-size: 44rpx;
@@ -50,9 +53,12 @@
 
 .top-media-info {
   position: absolute;
-  left: 24rpx;
-  bottom: 32rpx;
+  left: 0;
+  bottom: 0;
+  padding-left: 24rpx;
+  padding-bottom: 32rpx;
   width: 550rpx;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
 .top-media-title {
   color: #fff;
@@ -63,7 +69,7 @@
 .author-info-wrap {
   display: flex;
   align-items: center;
-  margin-top: 12rpx;
+  margin-top: 8rpx;
   color: #fff;
   font-size: 20rpx;
 }
