--- a/pages/tab-bar-pages/home/components/top-media/index.wxss
+++ b/pages/tab-bar-pages/home/components/top-media/index.wxss
@@ -5,7 +5,6 @@
   height: 420rpx;
   border-radius: 32rpx;
   overflow: hidden;
-  text-shadow: 0 0 1px #999;
 }
 .top-media {
   position: relative;
@@ -20,10 +19,10 @@
   position: absolute;
   top: 0;
   left: 0;
-  padding-top: 16rpx;
-  padding-left: 24rpx;
+  padding: 16rpx 24rpx 0 24rpx;
   display: flex;
   align-items: center;
+  width: calc(100% - 126rpx);
   color: #fff;
   background: linear-gradient(0, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
@@ -55,9 +54,8 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  padding-left: 24rpx;
-  padding-bottom: 32rpx;
-  width: 550rpx;
+  padding: 0 24rpx 32rpx 24rpx;
+  width: calc(100% - 126rpx);
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
 }
 .top-media-title {
@@ -86,8 +84,10 @@
   right: 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
-  padding: 15rpx;
+  padding: 15rpx 0;
+  width: 126rpx;
   height: 420rpx;
   backdrop-filter: blur(10px);
 }
