--- a/pages/subpages/mine/setting/index.wxml
+++ b/pages/subpages/mine/setting/index.wxml
@@ -38,6 +38,10 @@
     <image class="arrow" src="./images/arrow.png" />
   </view>
   <view class="list row between">
+    <view class="title">在线客服</view>
+    <image class="arrow" src="./images/arrow.png" />
+  </view>
+  <view class="list row between">
     <view class="title">关于小鱼游</view>
     <view class="row">
       <view class="content">v1.0.0</view>
