--- a/components/goods-item/index.wxss
+++ b/components/goods-item/index.wxss
@@ -30,14 +30,14 @@
   margin-bottom: 1rpx;
   padding: 0 12rpx;
   height: 33rpx;
-  color: #FFE5BD;
+  color: #ef3741;
   font-size: 18rpx;
   line-height: 33rpx;
   font-weight: 500;
   text-align: center;
   vertical-align: text-bottom;
   border-radius: 8rpx;
-  background: linear-gradient(90deg, #404A5C 0%, #0F131A 100%);
+  background: #fce4e6;
 }
 
 .info-wrap {
