--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
@@ -149,13 +149,13 @@
   margin-bottom: 10rpx;
   padding: 0 12rpx;
   height: 36rpx;
+  color: #ef3741;
+  font-size: 22rpx;
   line-height: 36rpx;
   text-align: center;
-  font-size: 22rpx;
   font-weight: 500;
-  color: #FFE5BD;
   border-radius: 8rpx;
-  background: linear-gradient(90deg, #404A5C 0%, #0F131A 100%);
+  background: #fce4e6;
 }
 
 .list-spec {
