--- a/custom-tab-bar/index.wxml
+++ b/custom-tab-bar/index.wxml
@@ -7,6 +7,10 @@
     <image class="icon" src="/images/tab-bar/mall{{tabType === 'mall' ? '_fill' : ''}}.png" />
     <view class="text {{tabType === 'mall' ? 'selected' : ''}}">商城</view>
   </view>
+  <view class="tab" bindtap="switchTab" data-path="/pages/tab-bar-pages/notice/index">
+    <image class="icon notice" src="/images/tab-bar/notice{{tabType === 'notice' ? '_fill' : ''}}.png" />
+    <view class="text {{tabType === 'mall' ? 'selected' : ''}}">消息</view>
+  </view>
   <view class="tab" bindtap="switchTab" data-path="/pages/tab-bar-pages/mine/index">
     <image class="icon" src="/images/tab-bar/mine{{tabType === 'mine' ? '_fill' : ''}}.png" />
     <view class="text {{tabType === 'mine' ? 'selected' : ''}}">我的</view>
