--- a/pages/tab-bar-pages/mine/index.wxss
+++ b/pages/tab-bar-pages/mine/index.wxss
@@ -25,18 +25,10 @@
   z-index: -1;
 }
 
-.notice-icon-wrap {
+.sign-in-icon {
   margin-left: 8px;
-  font-size: 0;
-  width: 32px;
-  height: 32px;
-  border-radius: 50%;
-  background: rgba(0, 0, 0, 0.3);
-  border: 0.5px solid rgba(255,255,255,0.3);
-}
-.notice-icon {
-  width: 24px;
-  height: 24px;
+  width: 33px;
+  height: 27.5px;
 }
 
 .mine-avatar {
