--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -1,6 +1,6 @@
 <view class="nav-bar {{navBarActive ? 'active': ''}}" style="padding-top: {{statusBarHeight}}px">
   <view class="menu-tabs-wrap">
-    <image class="sign-in-icon" src="/images/sign_in.png" bindtap="navToMessageCenter" />
+    <image class="sign-in-icon" src="/images/sign_in.png" />
     <view class="menu-tabs">
       <view wx:for="{{['关注', '发现']}}" wx:key="index" class="menu-tab {{curMenuIndex === index ? 'active' : ''}}" bindtap="switchMenu" data-index="{{index}}">{{item}}</view>
     </view>
