--- a/pages/subpages/common/register/index.wxml
+++ b/pages/subpages/common/register/index.wxml
@@ -11,33 +11,18 @@
       <view>旅途的意义也许不在于目的地，​</view>
       <view>而是沿途的风景​</view>
     </view>
-    <button class="register-btn" bindgetphonenumber="getMobile" open-type="getPhoneNumber" hover-class="none">
+    <button class="register-btn" wx:if="{{!agree}}" bindtap="toast" hover-class="none">
+      <view>开启旅途</view>
+      <image class="arrow" src="https://img.ubo.vip/tiddler/temp/register/arrow.png" />
+    </button>
+    <button class="register-btn" wx:if="{{agree}}" bindgetphonenumber="getMobile" open-type="getPhoneNumber" hover-class="none">
       <view>开启旅途</view>
       <image class="arrow" src="https://img.ubo.vip/tiddler/temp/register/arrow.png" />
     </button>
     <view class="agreement-tips">
-      <text>开启旅途即表明您同意</text>
-      <text style="color: #0095fa;" bindtap="serviceAgreement">《用户服务协议》</text>
+      <checkbox class="checkbox" checked="{{agree}}" bindtap="toggleAgree" color="#0095fa" />
+      <text>开启旅途，阅读并同意</text>
+      <text style="color: #0095fa;" bindtap="checkAgreement">《用户服务协议》</text>
     </view>
-  </view>
-</view>
-
-<view class="auth-modal" wx:if="{{authModalVisible}}">
-  <view class="modal-main">
-    <view class="modal-title">获取您的头像、昵称</view>
-    <view class="modal-tips">获取用户头像、昵称，主要用于向用户提供具有辨识度的用户中心界面</view>
-    <view class="modal-form">
-      <view class="form-item">
-        <view class="label">头像</view>
-        <button class="avatar-wrap" bind:chooseavatar="chooseAvatar" open-type="chooseAvatar" hover-class="none">
-          <image class="avatar" src="{{avatarUrl}}" />
-        </button> 
-      </view>
-      <view class="form-item">
-        <view class="label">昵称</view>
-        <input class="nickname-input" bindinput="setNickname" type="nickname" placeholder="请输入昵称"/>
-      </view>
-    </view>
-    <view class="save-btn" bindtap="saveAuthInfo">保存</view>
   </view>
 </view>
