--- a/pages/subpages/common/register/index.wxss
+++ b/pages/subpages/common/register/index.wxss
@@ -63,83 +63,6 @@
   color: #999;
   font-size: 24rpx;
 }
-
-.auth-modal {
-  position: fixed;
-  top: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.3);
-  backdrop-filter: blur(10px);
-  z-index: 100;
-}
-.modal-main {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 50rpx;
-  width: 670rpx;
-  border-radius: 30rpx;
-  background: #fff;
-}
-.model-title {
-  color: #333;
-  font-size: 32rpx;
-}
-.modal-tips {
-  position: relative;
-  margin-top: 10rpx;
-  color: #999;
-  font-size: 24rpx;
-}
-
-.modal-form {
-  margin-top: 50rpx;
-}
-.form-item {
-  display: flex;
-  align-items: center;
-  height: 140rpx;
-  border-bottom: 1px solid #f5f5f5;
-}
-.form-item:first-child {
-  border-top: 1px solid #f5f5f5;
-}
-.label {
-  margin-right: 30rpx;
-  color: #333;
-  font-size: 28rpx;
-  font-weight: 500;
-}
-.avatar-wrapper {
-  flex: 1;
-  height: 100rpx;
-}
-.avatar {
-  width: 100rpx;
-  height: 100rpx;
-  border-radius: 16rpx;
-}
-.more-icon {
-  width: 24rpx;
-  height: 24rpx;
-}
-.nickname-input {
-  flex: 1;
-  font-size: 28rpx;
-}
-
-.save-btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 50rpx auto 0;
-  width: 464rpx;
-  height: 90rpx;
-  color: #fff;
-  font-size: 32rpx;
-  font-weight: bold;
-  border-radius: 45rpx;
-  background: #0095fa;
+.checkbox {
+  transform: scale(0.6);
 }
