--- a/pages/tab-bar-pages/mine/components/auth-info-popup/index.wxss
+++ b/pages/tab-bar-pages/mine/components/auth-info-popup/index.wxss
@@ -5,8 +5,8 @@
 }
 
 .logo {
-  width: 68rpx;
-  height: 68rpx;
+  width: 60rpx;
+  height: 60rpx;
   border-radius: 50%;
 }
 .app-name {
@@ -62,6 +62,10 @@
   height: 80rpx;
   border-radius: 50%;
 }
+.avatar-arrow {
+  width: 24rpx;
+  height: 24rpx;
+}
 .nickname-input {
   flex: 1;
   font-size: 28rpx;
@@ -76,7 +80,7 @@
   color: #fff;
   font-size: 28rpx;
   border-radius: 44rpx;
-  background: #F5701D;
+  background: #0095fa;
 }
 
 .cancel-btn {
