--- a/components/live-item/index.wxml
+++ b/components/live-item/index.wxml
@@ -7,7 +7,7 @@
 
   <view class="status-wrap row">
     <view class="status row {{item.status === 1 ? 'live' : 'notice'}}">
-      <image class="live-icon" wx:if="{{item.status === 1}}" src="https://img.ubo.vip/mp/i-media-list/live_status.gif" />
+      <image class="live-icon" wx:if="{{item.status === 1}}" src="https://static.tiddler.cn/mp/live_status.gif" />
       <view class="notice-spot" wx:if="{{item.status === 3}}" />
       <text>{{item.status === 1 ? '直播' : '预告'}}</text>
     </view>
@@ -20,7 +20,7 @@
       <image class="anchor-avatar avatar-default" src="{{item.anchorInfo.avatar}}" lazy-load mode="aspectFill" />
       <view class="anchor-name omit single-line">{{item.anchorInfo.nickname}}</view>
       <view class="praise-info row" wx:if="{{item.status === 1}}">
-        <image class="praise-icon" src="https://img.ubo.vip/tiddler/media-item/fire.png" />
+        <image class="praise-icon" src="/images/fire.png" />
         <text>{{NUM.over(item.praiseNumber, 100000)}}</text>
       </view>
       <button class="notice-btn" wx:if="{{item.status === 3}}" bindtap="subscribe">预约</button>
