--- a/components/scenic-item/index.wxml
+++ b/components/scenic-item/index.wxml
@@ -3,7 +3,7 @@
     <image class="cover" mode="widthFix" src="{{ item.cover }}" bindload="onCoverLoaded" lazy-load />
     <view class="type-label row">景点</view>
     <view class="address-info">
-      <image class="address-icon" src="https://img.ubo.vip/tiddler/media-item/address.png" />
+      <image class="address-icon" src="/images/address.png" />
       <text class="address-detail omit single-line">{{ item.address }}</text>
     </view>
   </view>
