--- a/components/video-item/index.wxml
+++ b/components/video-item/index.wxml
@@ -17,7 +17,7 @@
       <image class="play-icon" src="https://img.ubo.vip/tiddler/media-item/play.png" />
     </view>
     <view class="address-info" wx:if="{{item.address}}">
-      <image class="address-icon" src="https://img.ubo.vip/tiddler/media-item/address.png" />
+      <image class="address-icon" src="/images/address.png" />
       <text class="address-detail omit single-line">{{item.address}}</text>
     </view>
   </view>
