--- a/components/back-icon-white/index.wxml
+++ b/components/back-icon-white/index.wxml
@@ -1,3 +1,3 @@
 <view class="back-icon {{noBorder ? 'no-border' : ''}}" catchtap="navigateBack">
-  <image style="width: 20px; height: 20px;" src="https://img.ubo.vip/mp/i-back-icon/back-icon.png" />
+  <image style="width: 20px; height: 20px;" src="/images/back-white.png" />
 </view>
