feat: 替换远程图片地址

--- a/components/video-item/index.wxml
+++ b/components/video-item/index.wxml
@@ -10,7 +10,7 @@
       lazy-load 
     />
     <view class="private-tag row" wx:if="{{item.isPrivate}}">
-      <image class="private-icon" src="https://img.ubo.vip/tiddler/media-item/private-icon.png" />
+      <image class="private-icon" src="/images/private-icon.png" />
       <text>私密</text>
     </view>
     <view class="video-symbol">
