--- a/pages/subpages/mall/goods/subpages/cart/index.wxml
+++ b/pages/subpages/mall/goods/subpages/cart/index.wxml
@@ -15,7 +15,7 @@
       <view class="cart-list-header row">
         <checkbox class="checkbox {{deleteBtnVisible ? 'danger' : ''}}" checked="{{item.checked}}" data-index="{{index}}" bindtap="toggleCartChecked"/>
         <view class="shop-info" wx:if="{{item.shopInfo}}" bindtap="navToShop" data-id="{{item.shopInfo.id}}">
-          <image class="shop-img" src="{{item.shopInfo.avatar}}" lazy-load />
+          <image class="shop-img" src="{{item.shopInfo.logo}}" lazy-load />
           <view>{{item.shopInfo.name}}</view>
           <image style="width: 20rpx; height: 20rpx;" src="https://img.ubo.vip/mp/to-icon.png" />
         </view>
