--- a/pages/subpages/mall/goods/subpages/goods-detail/components/shop-showcase/index.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/components/shop-showcase/index.wxml
@@ -1,7 +1,7 @@
 <view class="shop-showcase">
   <view class="shop-info">
     <view class="avatar-wrap">
-      <image class="shop-avatar" src="{{shopInfo.avatar}}" />
+      <image class="shop-logo" src="{{shopInfo.logo}}" />
       <image class="enterprise-label" wx:if="{{shopInfo.type === 2}}" src="https://img.ubo.vip/mp/selection/goods-detail/firm-icon.png" />
     </view>
     <view class="name omit single-line">{{shopInfo.name}}</view>
