--- a/pages/subpages/mall/goods/subpages/shop/index.wxml
+++ b/pages/subpages/mall/goods/subpages/shop/index.wxml
@@ -9,7 +9,7 @@
 
 <view class="shop-info-wrap row">
   <view class="avatar-wrap">
-    <image class="shop-avatar" src="{{shopInfo.avatar}}" />
+    <image class="shop-logo" src="{{shopInfo.logo}}" />
     <image class="enterprise-label" wx:if="{{shopInfo.type === 2}}" src="https://img.ubo.vip/mp/selection/goods-detail/firm-icon.png" />
   </view>
   <view class="info">
