feat: 店铺退货地址

--- a/pages/subpages/mine/merchant-center/subpages/shop-management/index.wxml
+++ b/pages/subpages/mine/merchant-center/subpages/shop-management/index.wxml
@@ -9,7 +9,7 @@
 <view class="header" style="margin-top: {{statusBarHeight + 44}}px">
   <view class="shop-info-wrap row">
     <view class="avatar-wrap">
-      <image class="shop-avatar" src="{{shopInfo.avatar}}" />
+      <image class="shop-avatar" src="{{shopInfo.logo}}" />
       <image class="enterprise-label" wx:if="{{shopInfo.type === 2}}" src="https://img.ubo.vip/mp/selection/goods-detail/firm-icon.png" />
     </view>
     <view class="info">
@@ -59,7 +59,7 @@
       <view class="btn-title">商品管理</view>
     </view>
     <view class="btn">
-      <view class="btn-icon-wrap" bindtap="navToReturnAddressManagement">
+      <view class="btn-icon-wrap" bindtap="navToRefundAddressManagement">
         <image class="btn-icon" src="./images/address.png" />
       </view>
       <view class="btn-title">寄回地址</view>
