--- a/pages/subpages/mine/merchant-center/subpages/hotel-management/index.wxss
+++ b/pages/subpages/mine/merchant-center/subpages/hotel-management/index.wxss
@@ -38,7 +38,7 @@
   font-size: 0;
   border-radius: 50%;
 }
-.shop-avatar {
+.shop-logo {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -72,7 +72,7 @@
   border-radius: 16rpx;
   background: linear-gradient(315deg, #DAB174 0%, #FFE5BD 100%);
 }
-.shop-avatar {
+.shop-logo {
   width: 90rpx;
   height: 90rpx;
   border-radius: 50%;
