--- a/pages/subpages/mine/order-center/subpages/goods-order-list/subpages/order-detail/index.wxss
+++ b/pages/subpages/mine/order-center/subpages/goods-order-list/subpages/order-detail/index.wxss
@@ -12,7 +12,7 @@
   margin-bottom: 24rpx;
   font-size: 28rpx;
 }
-.shop-avatar {
+.shop-logo {
   margin-right: 16rpx;
   width: 40rpx;
   height: 40rpx;
